Fix fixed scrollbar height
Enact-DCO-1.0-Signed-off-by: YB Sung (yb.sung@lge.com)

--- a/packages/moonstone/Scroller/Scrollbar.less
+++ b/packages/moonstone/Scroller/Scrollbar.less
@@ -36,7 +36,7 @@
 
 	&.native {
 		position: fixed;
-		height: 100%;
+		height: inherit;
 		box-sizing: border-box;
 		right: 0;
 		pointer-events: none;
